[package]
name = "astroport"
version = "0.2.0"
authors = ["Astroport"]
edition = "2018"
description = "Common astroport types"
license = "Apache-2.0"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.16" }
cosmwasm-std = { version = "1", features = ["iterator"] }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
uint = "0.9.3"
cw-storage-plus = {version = "0.16", features = ['iterator']}
cosmwasm-schema = "1"
apollo-cw-asset = "0.1.0"
